# react-scada-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py  users.py
app/api/: __init__.py  alarms.py  auth.py  endpoints.py  history.py  screens.py  tags.py
app/core/: config.py  mqtt_client.py
app/db/: base.py  models.py  session.py
app/schemas/: scada.py  tag.py  user.py
app/services/: engine.py  history.py  mqtt_listener.py  storage.py
app/services/alarms/: __init__.py  engine.py
app/services/bridges/: __init__.py  base.py  factory.py  modbus.py  mqtt_bridge.py  opcua.py  simulator.py
scripts/: fix_enum.py  reset_db.py  seed_data.py  test_plc.py
